# Cbase

./: .env.example  .gitignore  CLAUDE.md  README.md  audit_chunks.py  docker-compose.yaml  langfuse-compose.yml  setup.sh  start.sh  stop.sh
ai-service/: .coverage  Dockerfile  eval_cli.py  pyproject.toml  restart_with_langfuse.sh
ai-service/api/: __init__.py  admin_models.py  app.py  chat.py  chat_errors.py  dependencies.py  documents.py  health.py
ai-service/chunking/: __init__.py  base.py  enrich.py  merge.py  models.py  orchestrator.py  parent_child_chunker.py  title_chunker.py  token_chunker.py
ai-service/common/: __init__.py  exceptions.py  logging.py  utils.py
ai-service/config/: llm.yaml  models.yaml
ai-service/core/: __init__.py
ai-service/etl/: __init__.py  pipeline.py
ai-service/kes_mcp/: __init__.py  auth.py  prompts_def.py  rate_limiter.py  resources_def.py  server.py  tools.py  tools_def.py
ai-service/llm/: __init__.py  base.py  config_watcher.py  factory.py  model_factory.py  model_pool.py  openai_compatible.py  rerank_llm.py
ai-service/models/: __init__.py  chat.py  config.py  document.py  health.py  lifecycle.py  llm.py  retrieval.py
ai-service/mq/: __init__.py  client.py  handler.py
ai-service/observability/: __init__.py  langfuse_tracer.py
ai-service/parsing/: __init__.py  base.py  models.py  orchestrator.py  registry.py
ai-service/retrieval/: __init__.py  circuit_breaker.py  citation.py  context_assembler.py  critic.py  dag_executor.py  dedup.py  dense.py  embedding.py  feedback.py.bak  fusion.py  hybrid_search.py  judge.py  (+14 more)
(+391 files in other folders)
