[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "fpdf2>=2.8.7",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "langchain-text-splitters>=0.3.0",
    "lxml>=5.0.0",
    "mcp>=1.0.0",
    "minio>=7.2.0",
    "openai>=2.37.0",
    "openpyxl>=3.1.0",
    "pgvector>=0.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.47.0",
    "langfuse>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.0",
]

[project.optional-dependencies]
reranker = [
    "sentence-transformers>=3.0.0",
]
sparse = [
    "jieba>=0.42.0",
]
pdf = [
    "pdfplumber>=0.11.0",
    "onnxruntime>=1.18.0",
    "scikit-learn>=1.5.0",
    "huggingface_hub>=0.23.0",
    "opencv-python-headless>=4.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
